# FlightUpdater

./: .gitignore  INSTRUCTIONS.md  README.md  build.bat  build.ps1  config.json.template  config.py  config_template.py  flight_fetcher.py  flight_gui.py  main.py  pyproject.toml  update-dependencies.bat  version.py
.github/workflows/: compile-lint-test.yml  release.yml
FlightUpdater/: flight_fetcher.py  flight_matcher.py  main.py
src/: config.py  main.py
src/model/: flight_display_row.py
src/services/: flight_comparison_service.py  flight_updater_service.py
src/view/: flight_table_formatter.py  flight_updater_view.py  ga_pdf_printer.py
