[project]
name = "flightupdater"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Atkins",email = "paul@ruskin.me.uk"}
    {name = "Bruno Tagliapietra",email = "bruno.tagliapietra@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.13.5"
pandas = ">=2.3.1,<3.0.0"
requests = ">=2.32.4,<3.0.0"
tkcalendar = ">=1.6.1,<2.0.0"
reportlab = ">=4.4.2,<5.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

