[tool.poetry]
name = "flightupdater"
version = "2.2.0"
description = "Flight updater GUI"
authors = ["Paul Ruskin"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
glidinglib = {path = "../glidinglib", develop = true}
requests = "^2.33.1"
tkcalendar = "^1.6.1"
reportlab = "^4.4.0"
tzdata = "^2026.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"